Replaced header with a modular navbar component, tweaked and fixed dynamic spacing, refactored css

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -10,33 +10,104 @@ html {
     color: #fff;
 }
 
-.App {
-    
-}
-
-/* Header/Subheader */
+/* Header + Navbar Component */
 
 .headerBar {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 80px;
+    height: auto;
     background-color: #101010;
     text-align: center;
     color: #fff;
     display: flex;
     flex-direction: row;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
 }
 
-.headerBar h1 {
-    margin-right: 40%;
+.navbarContainer {
+    overflow: hidden;
+    display: flex;
 }
 
+.navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+}
+
+.navbar a {
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    padding: 20px 18px;
+}
+
+.menuDropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdownButton {
+    font-weight: bold;
+}
+
+.menuDropdown .dropdownButton {
+    color: white;
+    background-color: inherit;
+    font-size: 18px;
+    font-family: inherit;
+    margin: 0;
+    padding: 20px 18px;
+    border: none;
+    outline: none;
+}
+
+.dropdownContent {
+    display: none;
+    position: absolute;
+    background-color: #101010;
+    min-width: 140px;
+    z-index: 1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0,0.2);
+}
+
+.dropdownContent a {
+    float: none;
+    color: white;
+    text-decoration: none;
+    text-align: left;
+    font-weight: 200;
+    padding: 12px 16px;
+    display: block;
+}
+
+/* Navbar COmponent Graphical Functions */
+
+.dropdownContent a:hover {
+    background-color: #202020;
+}
+
+.menuDropdown:hover .dropdownContent {
+    display: block;
+}
+
+.navbar a:hover, .menuDropdown:hover .dropdownButton {
+    color: #e7e7e7;
+    background-color: #151515;
+}
+
+.navbar a:active {
+    color: #d4af37;
+}
+
+/* Subheader */
+
 .subheader {
-    margin-top: 80px;
     height: auto;
     background-color: rgba(255,0,0,0.3);
     display: flex;
